Images should be upercase

--- a/getfedora.org/data/content/cloud/download/index.html
+++ b/getfedora.org/data/content/cloud/download/index.html
@@ -282,7 +282,7 @@
         <!-- Start Base images -->
 		      <div class="row">
 		          <div class="col-xs-12">
-		            <h3>${_('Atomic Host images for Cloud Environments')}</h3>
+		            <h3>${_('Atomic Host Images for Cloud Environments')}</h3>
 		          </div>
 		      </div>
 		      <!-- Mobile -->
