update links to nightlies and TCs

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -274,7 +274,7 @@
             <h3>${_('Nightly builds')}</h3>
             </div>
             <div class="col-lg-4 col-lg-offset-1">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
+            <p class="download"><a href="https://www.happyassassin.net/nightlies.html">${Markup(_('View Images &gt;'))}</a></p>
             </div>
           </div>
           <div class="white">
@@ -285,7 +285,7 @@
             <h3>${_('Other composes (Alpha / Beta / TCs / RCs)')}</h3>
             </div>
             <div class="col-lg-4 col-lg-offset-1">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
+            <p class="download"><a href="https://dl.fedoraproject.org/pub/alt/stage">${Markup(_('View Images &gt;'))}</a></p>
             </div>
           </div>
         </div>
