--- a/getfedora.org/data/content/cloud/download/index.html
+++ b/getfedora.org/data/content/cloud/download/index.html
@@ -137,7 +137,7 @@
             <p>${_('GP2 format AMIs use faster SSD storage; use these AMIs for speed, although note your storage costs will be more than standard.')}</p>
           </div>
           <div class="col-sm-6">
-            <h5 class="bold">${_('Standard Format)')}</h5>
+            <h5 class="bold">${_('Standard Format')}</h5>
             <p>${_('Standard format AMIs are more suitable if you have infrequently accessed data and want to keep storage cost low.')}</p>
           </div>
         </div>
