--- a/spins.fedoraproject.org/data/content/index.html
+++ b/spins.fedoraproject.org/data/content/index.html
@@ -78,7 +78,7 @@
     	  	</div>
     	  </div>
     	  <div class="row">
-    	  	<div class="col-xs-10 col-xs-offset-1 text-center bottom-space">
+    	  	<div class="col-xs-10 col-xs-offset-1 text-center">
     	  	  <p class="screenshot bottom-border"><a href="/${lang}/cinnamon"><img class="spin-banner" src="${path}/static/images/cinnamon-banner.png" alt="Cinnamon banner" /></a><br />
     	  	  <span class="grey">${_('A modern desktop featuring traditional Gnome user experience.')}</span></p>
   	  	  </div>
