--- a/spins.fedoraproject.org/data/content/soas/download/index.html
+++ b/spins.fedoraproject.org/data/content/soas/download/index.html
@@ -17,8 +17,8 @@
       <div class="row">
         <div class="col-md-7 col-md-offset-5 text-left">
           <h2>${Markup(_('Download Fedora %(rel)s SoaS Desktop')) % {'rel':global_variables.release['curr_id']}}</h2>
-            <p class="gr"><a class="btn btn-success" href="http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/x86_64/Fedora-SoaS-Live-x86_64-24-20160614.n.0.iso" role="button">${_('Download')}</a></p>
-<!--            <p class="gr"><a class="btn btn-success soas-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Live/x86_64/Fedora-SoaS-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p> -->
+<!--            <p class="gr"><a class="btn btn-success" href="http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/x86_64/Fedora-SoaS-Live-x86_64-24-20160614.n.0.iso" role="button">${_('Download')}</a></p> -->
+            <p class="gr"><a class="btn btn-success soas-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Live/x86_64/Fedora-SoaS-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>
             <h5>${Markup(_('%s MB ISO Image for 64-bit PC')) % global_variables.iso_size['x86_64_Live_Soas']}</h5>
         </div>
       </div>
@@ -26,7 +26,7 @@
 </header>
 <div class="container download-container top-space">
 
-<xi:include href="../../../templates/generic/unofficial.html" />
+<!-- <xi:include href="../../../templates/generic/unofficial.html" /> -->
 
   <div class="row">
     <div class="col-md-8 text-left bottom-space">
@@ -39,8 +39,8 @@
           <h4>${_('Direct Downloads')}</h4>
           <ul>
               <li>
-<!--                  <p><a class="soas-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Live/i386/Fedora-SoaS-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sMB Live image')) % global_variables.iso_size['i686_Live_Soas']}</a></p> -->
-                  <p><a href="http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/i386/Fedora-SoaS-Live-i386-24-20160614.n.0.iso">${Markup(_('32-bit %sMB Live image')) % global_variables.iso_size['i686_Live_Soas']}</a></p>
+                  <p><a class="soas-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Live/i386/Fedora-SoaS-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sMB Live image')) % global_variables.iso_size['i686_Live_Soas']}</a></p>
+<!--                  <p><a href="http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/i386/Fedora-SoaS-Live-i386-24-20160614.n.0.iso">${Markup(_('32-bit %sMB Live image')) % global_variables.iso_size['i686_Live_Soas']}</a></p> -->
               </li>
           </ul>
           <h4>${Markup(_('ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt; Technology'))}</h4>
