--- a/getfedora.org/data/content/cloud/download/index.html
+++ b/getfedora.org/data/content/cloud/download/index.html
@@ -221,14 +221,14 @@
 	              <div class="col-xs-12">
 	                <h5 class="bold">${_('VirtualBox Image')}</h5>
 	                <p>${_('If you\'re using Vagrant on Mac OS X or Windows, this is likely the image you\'ll want to use.')}</p>
-	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-Vagrant-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-virtualbox.box" role="button">${_('Download')}</a>
-	                  <p class="caption">${_('64-bit %sMB VirtualBox Base Vagrant Image') % global_variables.iso_size['VBvag_cloud']}</p>
+	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.release['atomic_VBvag_cloud_url']}" role="button">${_('Download')}</a>
+	                  <p class="caption">${_('64-bit %sMB VirtualBox Base Vagrant Image') % global_variables.iso_size['atomic_VBvag_cloud']}</p>
 	              </div>
 	              <div class="col-xs-12">
 	                <h5 class="bold">${_('libvirt/KVM Image')}</h5>
 	                <p>${_('If you\'re using Vagrant on Fedora, this is the image you\'ll want to use.')}</p>
-	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-Vagrant-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-libvirt.box" role="button">${_('Download')}</a>
-	                  <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['libvag_cloud']}</p>
+	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.release['atomic_libvag_cloud_url']}" role="button">${_('Download')}</a>
+	                  <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['atomic_libvag_cloud']}</p>
 	              </div>
 	            </div>
 
@@ -245,12 +245,12 @@
 	            </div>
 	            <div class="row hidden-xs">
 	              <div class="col-sm-6">
-	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-Vagrant-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-virtualbox.box" role="button">${_('Download')}</a>
-	                  <p class="caption">${_('64-bit %sMB VirtualBox Base Vagrant Image') % global_variables.iso_size['VBvag_cloud']}</p>
+	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.release['atomic_VBvag_cloud_url']}" role="button">${_('Download')}</a>
+	                  <p class="caption">${_('64-bit %sMB VirtualBox Base Vagrant Image') % global_variables.iso_size['atomic_VBvag_cloud']}</p>
 	              </div>
 	              <div class="col-sm-6">
-	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/CloudImages/x86_64/images/Fedora-Cloud-Base-Vagrant-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.x86_64.vagrant-libvirt.box" role="button">${_('Download')}</a>
-	                  <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['libvag_cloud']}</p>
+	                <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.release['atomic_libvag_cloud_url']}" role="button">${_('Download')}</a>
+	                  <p class="caption">${_('64-bit %sMB libvirt/KVM Base Vagrant Image') % global_variables.iso_size['atomic_libvag_cloud']}</p>
 	              </div>
 	            </div>
 	          </div>
@@ -333,7 +333,7 @@
           <p>
             ${_('Docker:')}
             <ul>
-              <li><p><a class="download-cloud-splash" href="${global_variables.path['download']}/${global_variables.release['curr_atomic_id']}/Cloud/i386/images/Fedora-Cloud-Base-${global_variables.release['curr_atomic_id']}-${global_variables.release['RC_gold']}.i386.qcow2">${_('Docker Image (${SIZE})')}</a></p></li>
+              <li><p><a class="download-cloud-splash" href="http://dl.fedoraproject.org/pub/alt/atomic/stable/Fedora-Atomic-24-20160921.0/Docker/x86_64/images/Fedora-Docker-Base-24-20160921.0.x86_64.tar.xz">${_('Docker Image (%sMB)') % global_variables.iso_size['x86_64_docker']}</a></p></li>
             </ul>
           </p>
         <div class="top-space bottom-margin"><h4>${_('Resources')}</h4></div>
