--- a/getfedora.org/data/content/verify.html
+++ b/getfedora.org/data/content/verify.html
@@ -38,10 +38,10 @@
             </div>
             <h4 class="uppercase">${_('Workstation')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-x86_64-CHECKSUM">${_('For 64-bit images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For 64-bit images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-i386-CHECKSUM">${_('For 32-bit images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-i386-CHECKSUM">${_('For 32-bit images')}</a>
             </div>
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem">
@@ -50,7 +50,7 @@
             </div>
             <h4 class="uppercase">${_('Server')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-x86_64-CHECKSUM">${_('For 64-bit images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For 64-bit images')}</a>
             </div>
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem cloud">
@@ -59,16 +59,13 @@
             </div>
             <h4 class="uppercase">${_('Atomic')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Cloud_Images-x86_64-${global_variables.release['curr_id']}-CHECKSUM">${_('For Base images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/Atomic/x86_64/iso/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM">${_('For Atomic Host Iso')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="https://dl.fedoraproject.org/pub/alt/atomic/stable/CloudImages/x86_64/images/Fedora-CloudImages-${global_variables.release['curr_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM">${_('For Atomic images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/CloudImages/x86_64/images/Fedora-CloudImages-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM">${_('For Atomic Host images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="https://dl.fedoraproject.org/pub/alt/atomic/stable/Atomic/x86_64/iso/Fedora-Atomic-${global_variables.release['curr_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM">${_('For Atomic Installer')}</a>
-            </div>
-            <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Docker-x86_64-${global_variables.release['curr_id']}-CHECKSUM">${_('For Docker')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/Docker/x86_64/images/Fedora-Docker-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM">${_('For Docker')}</a>
             </div>
         </div>
     </div>
