--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -46,24 +46,10 @@
             <h3>${_('Fedora Server')}</h3>
             </div>
             <div class="col-md-3">
-            <p>${Markup(_('64 bit %sMB ISO')) % global_variables.iso_size['ARM_Server']}</p>
+            <p>${Markup(_('64 bit %sMB ISO')) % global_variables.iso_size['x86_64_server_net']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/server.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Server')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('32 bit %sMB ISO')) % global_variables.iso_size['ARM_Server']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/x86_64/iso/Fedora-Server-netinst-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -74,10 +60,10 @@
             <h3>${_('Fedora Workstation')}</h3>
             </div>
             <div class="col-md-3">
-            <p>${Markup(_('64 bit %sMB ISO')) % global_variables.iso_size['ARM_Minimal']}</p>
+            <p>${Markup(_('64 bit %sMB ISO')) % global_variables.iso_size['x86_64_workstation_net']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Minimal-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/x86_64/iso/Fedora-Workstation-netinst-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -88,10 +74,10 @@
             <h3>${_('Fedora Workstation')}</h3>
             </div>
             <div class="col-md-3">
-            <p>${Markup(_('32 bit %sMB ISO')) % global_variables.iso_size['ARM_Minimal']}</p>
+            <p>${Markup(_('32 bit %sMB ISO')) % global_variables.iso_size['i386_workstation_net']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Minimal-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
           </div>
         </div>
